Ran through code

--- a/week3d1_vw_spatial_distance.ipynb
+++ b/week3d1_vw_spatial_distance.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,17 +219,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading world boundaries data...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Download and load Natural Earth world boundaries data using the defined function\n",
     "\n",
@@ -238,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +381,7 @@
        "      <td>Eiffel Tower</td>\n",
        "      <td>48.858222</td>\n",
        "      <td>2.294500</td>\n",
-       "      <td>1253782042</td>\n",
+       "      <td>1254357345</td>\n",
        "      <td>POINT (2.2945 48.85822)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -446,7 +438,7 @@
       ],
       "text/plain": [
        "                   title   latitude   longitude  revision_id  \\\n",
-       "0           Eiffel Tower  48.858222    2.294500   1253782042   \n",
+       "0           Eiffel Tower  48.858222    2.294500   1254357345   \n",
        "1              Taj Mahal  27.175000   78.041944   1249822473   \n",
        "2      Statue of Liberty  40.689167  -74.044444   1253679586   \n",
        "3     Sydney Opera House -33.856810  151.215140   1253162730   \n",
@@ -503,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1090,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1232,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1265,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1481,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1738,7 +1730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1979,7 +1971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2005,19 +1997,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "An error occurred: HTTPSConnectionPool(host='nominatim.openstreetmap.org', port=443): Max retries exceeded with url: /search?q=Oxford%2C+UK&format=json&limit=1 (Caused by ReadTimeoutError(\"HTTPSConnectionPool(host='nominatim.openstreetmap.org', port=443): Read timed out. (read timeout=1)\"))\n",
-      "Coordinates for Oxford, UK: None\n",
-      "An error occurred: HTTPSConnectionPool(host='nominatim.openstreetmap.org', port=443): Max retries exceeded with url: /search?q=Somewhere+on+Earth&format=json&limit=1 (Caused by SSLError(SSLCertVerificationError(1, '[SSL: CERTIFICATE_VERIFY_FAILED] certificate verify failed: unable to get local issuer certificate (_ssl.c:1000)')))\n",
+      "Coordinates for Oxford, UK: (51.7520131, -1.2578499)\n",
       "Coordinates for Somewhere on Earth: None\n",
-      "An error occurred: HTTPSConnectionPool(host='nominatim.openstreetmap.org', port=443): Max retries exceeded with url: /search?q=Google+Headquarters&format=json&limit=1 (Caused by SSLError(SSLCertVerificationError(1, '[SSL: CERTIFICATE_VERIFY_FAILED] certificate verify failed: unable to get local issuer certificate (_ssl.c:1000)')))\n",
-      "Coordinates for Google Headquarters: None\n"
+      "Coordinates for Google Headquarters: (37.4217636, -122.084614)\n"
      ]
     }
    ],
@@ -2031,6 +2020,37 @@
     "    coords = get_coordinates(location)\n",
     "    print(f\"Coordinates for {location}: {coords}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['new guitar', 'new sweater']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_Comments = [\"I wanted a new guitar for Christmas, not a new sweater\"]\n",
+    "\n",
+    "import re\n",
+    "\n",
+    "pattern = re.compile(r\"new \\w+\")\n",
+    "\n",
+    "for comment in list_Comments:\n",
+    "    print(pattern.findall(comment))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
